# Yadro

./: CMakeLists.txt  Config.txt  README.md  tape.txt  tapeIn.txt  tapeOut.txt
src/: BinaryTape.hpp  MergeSort.cpp  MergeSort.hpp  Tape.hpp  TapeInterface.hpp  TextTape.hpp  main.cpp  pch.h
tests/: Tests.cpp
